--- a/EquiposTecnicosSN.Web/Views/Shared/_SearchODTsMC.cshtml
+++ b/EquiposTecnicosSN.Web/Views/Shared/_SearchODTsMC.cshtml
@@ -3,7 +3,7 @@
 <div class="row">
     <div class="col-md-12">
         <div class="panel panel-primary">
-            <div class="panel-heading"><i class="fa fa-search fa-fw"></i> Buscar Orden de Trabajo de Mantenimiento Correctivo</div>
+            <div class="panel-heading"><i class="fa fa-search fa-fw"></i> Buscar</div>
 
             <div class="panel-body">
                 <form id="FormBuscarODT" method="get" data-nqn-ajax="true" action="@Url.Action("SearchODT", "ODTMantenimientoPreventivo")" data-nqn-target="#searchODTResults">
