--- a/EquiposTecnicosSN.Web/Content/Site.css
+++ b/EquiposTecnicosSN.Web/Content/Site.css
@@ -142,3 +142,11 @@ textarea {
 .centered-column {
     text-align: center;
 }
+
+a, a:active, a:focus {
+    outline: none;
+}
+
+.btn, .btn:active, .btn:focus {
+    outline: none;
+}
