--- a/EquiposTecnicosSN.Web/Views/Shared/_Layout.cshtml
+++ b/EquiposTecnicosSN.Web/Views/Shared/_Layout.cshtml
@@ -45,11 +45,8 @@
                             <a href="@Url.Action("Index", "EquiposBase")"><i class="fa fa-medkit fa-fw"></i> Equipos</a>
                         </li>
                         <li>
-                            <a href="#"><i class="fa fa-file-text fa-fw"></i> Ordenes de Trabajo<span class="fa arrow"></span></a>
-                            <ul class="nav nav-second-level">
-                                <li>@Html.ActionLink("Mantenimientos Correctivos", "Index", "ODTMantenimientoCorrectivo")</li>
-                                <li>@Html.ActionLink("Mantenimientos Preventivos", "Index", "ODTMantenimientoPreventivo")</li>
-                            </ul>
+                            <a href="@Url.Action("IndexMantenimientos", "ODTMantenimientoCorrectivo")"><i class="fa fa-file-text fa-fw"></i> Ordenes de Trabajo</a>
+
                         </li>
                         <li>
                             <a href="#"><i class="fa fa-bar-chart-o fa-fw"></i> Indicadores</a>
