--- a/EquiposTecnicosSN.Web/Views/Shared/_SearchODTs.cshtml
+++ b/EquiposTecnicosSN.Web/Views/Shared/_SearchODTs.cshtml
@@ -2,7 +2,7 @@
 <div class="row">
     <div class="col-md-12">
         <div class="panel panel-primary">
-            <div class="panel-heading"><i class="fa fa-search fa-fw"></i> Buscar Orden de Trabajo</div>
+            <div class="panel-heading"><i class="fa fa-search fa-fw"></i> Buscar</div>
 
             <div class="panel-body">
                 <form id="formBuscarODT" method="get" data-nqn-ajax="true" action="@Url.Action("SearchODT", "ODTMantenimientoPreventivo")" data-nqn-target="#searchODTResults">
