--- a/EquiposTecnicosSN.Web/Content/Site.css
+++ b/EquiposTecnicosSN.Web/Content/Site.css
@@ -150,3 +150,102 @@ a, a:active, a:focus {
 .btn, .btn:active, .btn:focus {
     outline: none;
 }
+/*
+
+@media all and (max-width:768px) {
+    tr {
+        display: table;  width:100%;    
+    }
+    td {
+        display: table-row; 
+    }
+}
+
+*/
+@media
+	only screen and (max-width: 760px),
+	(min-device-width: 768px) and (max-device-width: 1024px)  {
+
+		/* Force table to not be like tables anymore */
+		table, thead, tbody, th, td, tr {
+			display: block;
+		}
+
+		/* Hide table headers (but not display: none;, for accessibility) */
+		thead tr {
+			position: absolute;
+			top: -9999px;
+			left: -9999px;
+		}
+
+		tr { border: 1px solid #ccc; }
+
+		td {
+			/* Behave  like a "row" */
+			border: none;
+			border-bottom: 1px solid #eee;
+			position: relative;
+			padding-left: 50% !important;
+		}
+
+        td.no-results {
+			/* Behave  like a "row" */
+			padding-left: 0 !important;
+		}
+        .no-results td:nth-of-type(1):before {
+			/* Behave  like a "row" */
+			{ content: "" }
+		}
+
+		td:before {
+			/* Now like a table header */
+			position: absolute;
+			/* Top/left values mimic padding */
+			left: 6px;
+			width: 45%;
+			padding-right: 10px;
+			white-space: nowrap;
+            font-weight: bold;
+		}
+
+		/*
+		Labels Search Equipos
+		*/
+        .search-equipos td:nth-of-type(1) {
+            padding-left: 5px !important;
+        }
+		.search-equipos td:nth-of-type(1):before { content: ""; }
+		.search-equipos td:nth-of-type(2):before { content: "Tipo"; }
+		.search-equipos td:nth-of-type(3):before { content: "Marca"; }
+		.search-equipos td:nth-of-type(4):before { content: "Modelo"; }
+		.search-equipos td:nth-of-type(5):before { content: "Estado"; }
+		.search-equipos td:nth-of-type(6):before { content: "Ubicación"; }
+
+        /*
+		Labels Search Equipos
+		*/
+        .search-odts td:nth-of-type(1) {
+            padding-left: 5px !important;
+        }
+		.search-odts td:nth-of-type(1):before { content: ""; }
+		.search-odts td:nth-of-type(2):before { content: "Estado"; }
+		.search-odts td:nth-of-type(3):before { content: "Fecha de Inicio"; }
+		
+	}
+
+	/* Smartphones (portrait and landscape) ----------- */
+	@media only screen
+	and (min-device-width : 320px)
+	and (max-device-width : 480px) {
+		body {
+			padding: 0;
+			margin: 0;
+			width: 320px; }
+		}
+
+	/* iPads (portrait and landscape) ----------- */
+	@media only screen and (min-device-width: 768px) and (max-device-width: 1024px) {
+		body {
+			width: 495px;
+		}
+	}
