--- a/EquiposTecnicosSN.Web/Content/bootstrap.css
+++ b/EquiposTecnicosSN.Web/Content/bootstrap.css
@@ -1588,7 +1588,7 @@ table th[class*="col-"] {
   .table-responsive {
     width: 100%;
     margin-bottom: 15px;
-    overflow-x: scroll;
+    overflow-x: hidden;
     overflow-y: hidden;
     border: 1px solid #dddddd;
   }
