--- a/EquiposTecnicosSN.Web/Views/Home/Index.cshtml
+++ b/EquiposTecnicosSN.Web/Views/Home/Index.cshtml
@@ -13,7 +13,7 @@
                     </div>
                     <div class="col-xs-9 text-right">
                         <div class="big">@Html.DisplayFor(model => model.EquiposFuncionalesCount)</div>
-                        <div>Funcionales</div>
+                        <div>Operativos</div>
                     </div>
                 </div>
             </div>
@@ -40,7 +40,7 @@
                     </div>
                 </div>
             </div>
-            <a href="@Url.Action("Index", "ODTMantenimientoCorrectivo")">
+            <a href="@Url.Action("IndexMantenimientos", "ODTMantenimientoCorrectivo")">
                 <div class="panel-footer">
                     <span class="pull-left"> Mant. Correctivos</span>
                     <span class="pull-right"><i class="fa fa-arrow-circle-right"></i></span>
@@ -63,7 +63,7 @@
                     </div>
                 </div>
             </div>
-            <a href="@Url.Action("Index", "ODTMantenimientoPreventivo")">
+            <a href="@Url.Action("IndexMantenimientos", "ODTMantenimientoCorrectivo")">
                 <div class="panel-footer">
                     <span class="pull-left">Mant. Preventivos</span>
                     <span class="pull-right"><i class="fa fa-arrow-circle-right"></i></span>
