--- a/EquiposTecnicosSN.Web/Views/ODTMantenimientoCorrectivo/CreateForEquipo.cshtml
+++ b/EquiposTecnicosSN.Web/Views/ODTMantenimientoCorrectivo/CreateForEquipo.cshtml
@@ -104,7 +104,7 @@
     <div class="row">
         <div class="col-md-12">
             <div class="form-group">
-                <a href="@Url.Action("Index")" class="btn btn-default" style="margin-bottom:5px;"> Volver</a>
+                <a href="@Url.Action("Details", "EquiposBase",new { id = Model.Odt.EquipoId})" class="btn btn-default" style="margin-bottom:5px;">Cancelar</a>
                 <input type="submit" value="Guardar" class="btn btn-primary" style="margin-bottom:5px;" />
                 <!--<input type="submit" name="action" value="Guardar y diagnosticar" class="btn btn-info" style="margin-bottom:5px;" />-->
             </div>
