--- a/EquiposTecnicosSN.Web/Views/ODTMantenimientoCorrectivo/Details.cshtml
+++ b/EquiposTecnicosSN.Web/Views/ODTMantenimientoCorrectivo/Details.cshtml
@@ -17,7 +17,7 @@
 <div class="row">
     <div class="col-md-12">
         <div class="form-group">
-            <a href="@Url.Action("Details", Model.Equipo.WebController() ,new { id = Model.Equipo.EquipoId })" class="btn btn-default"> Volver</a>
+            <a href="@Url.Action("Details", "EquiposBase" ,new { id = Model.Equipo.EquipoId })" class="btn btn-default"> Volver</a>
 
             @if (OrdenDeTrabajoEstado.Abierta.Equals(Model.Estado) || OrdenDeTrabajoEstado.EsperaRepuesto.Equals(Model.Estado))
             {
