--- a/EquiposTecnicosSN.Web/Views/Shared/_OrdenesDeTrabajoEquipo.cshtml
+++ b/EquiposTecnicosSN.Web/Views/Shared/_OrdenesDeTrabajoEquipo.cshtml
@@ -15,7 +15,7 @@
 
                 <div class="row">
                     <div class="col-md-12">
-                        <table class="table table-hover table-responsive table-condensed table-striped">
+                        <table class="table table-hover table-responsive table-condensed table-striped search-odts">
                             <thead>
 
                                 <tr>
@@ -107,7 +107,7 @@
 
                 <div class="row">
                     <div class="col-md-12">
-                        <table class="table table-hover table-responsive table-condensed table-striped">
+                        <table class="table table-hover table-responsive table-condensed table-striped search-odts">
                             <thead>
 
                                 <tr>
