--- a/EquiposTecnicosSN.Web/Views/ODTMantenimientoCorrectivo/FillDiagnose.cshtml
+++ b/EquiposTecnicosSN.Web/Views/ODTMantenimientoCorrectivo/FillDiagnose.cshtml
@@ -1,4 +1,5 @@
-﻿@model EquiposTecnicosSN.Web.Models.MCViewModel
+﻿@using EquiposTecnicosSN.Web.CustomExtensions
+@model EquiposTecnicosSN.Web.Models.MCViewModel
 @{
     ViewBag.Title = "Orden de Trabajo Nº " + Model.Odt.NumeroReferencia + " para Mantenimiento Correctivo";
     Layout = "~/Views/Shared/_Layout.cshtml";
@@ -99,7 +100,7 @@
     <div class="row">
         <div class="col-md-6">
             <div class="form-group">
-                <a href="@Url.Action("Index")" class="btn btn-default"> Volver</a>
+                <a href="@Url.Action("Details", Model.Odt.WebController(), new { id = Model.Odt.OrdenDeTrabajoId })" class="btn btn-default"> Volver</a>
                 <input type="submit" value="Guardar" class="btn btn-primary" />
             </div>
         </div>
