--- a/EquiposTecnicosSN.Web/Views/Shared/_ListODTsMC.cshtml
+++ b/EquiposTecnicosSN.Web/Views/Shared/_ListODTsMC.cshtml
@@ -79,22 +79,22 @@
                                         @Html.DisplayFor(modelItem => item.Descripcion)
                                     </td>
                                     <td class="action-columns">
-                                        <a class="btn btn-default btn-xs btn-list"
+                                        @*<a class="btn btn-default btn-xs btn-list"
                                            href="@Url.Action("Edit", "ODTMantenimientoCorrectivo", new { id = item.OrdenDeTrabajoId }, null)"
                                            title="Editar Orden de trabajo">
                                             <span class="glyphicon glyphicon-pencil" aria-hidden="true"></span>
-                                        </a>
+                                        </a>*@
 
                                         <a class="btn btn-default btn-xs btn-list"
                                            href="@Url.Action("Details", "ODTMantenimientoCorrectivo", new { id = item.OrdenDeTrabajoId }, null)"
                                            title="Ver Orden de trabajo">
                                             <span class="glyphicon glyphicon-eye-open" aria-hidden="true"></span>
                                         </a>
-                                        <a class="btn btn-default btn-xs btn-list"
+                                        @*<a class="btn btn-default btn-xs btn-list"
                                            href="@Url.Action("Delete", "ODTMantenimientoCorrectivo", new { id = item.OrdenDeTrabajoId }, null)"
                                            title="Eliminar Orden de trabajo">
                                             <span class="glyphicon glyphicon-trash" aria-hidden="true"></span>
-                                        </a>
+                                        </a>*@
                                     </td>
                                 </tr>
                             }
